fix card stretch for titles with 2 rows

--- a/src/app/components/gui/main/stories/stories.component.scss
+++ b/src/app/components/gui/main/stories/stories.component.scss
@@ -11,7 +11,7 @@ app-card {
 }
 
 .article-grid {
-  @include flex-center(row, center, center);
+  @include flex-center(row, center, stretch);
   flex-wrap: wrap;
   gap: 2rem;
   width: 100%;
